# heard

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  demo_notes.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: hotkeys.md
heard/: __init__.py  __main__.py  accessibility.py  agent_state.py  analytics.py  audio_monitor.py  cli.py  client.py  codex_app.py  config.py  daemon.py  defects.py  demo.py  doctor.py  harness.py  heard_api.py  history.py  home_window.py  hook.py  hotkey.py  key_window.py  markdown.py  multi_agent.py  notify.py  onboarding.html  onboarding.py  persona.py  preferences.py  preferences_schema.yaml  profile.py  project_memory.py  prompt_window.py  providers.py  ptt_indicator.py  push_to_talk.py  service.py  session.py  settings_widgets.py  settings_window.py  spoken.py  (+9 more)
heard/adapters/: __init__.py  claude_code.py  codex.py
heard/assets/: __init__.py  key_prompt.html
heard/personas/: __init__.py  aria.md  atlas.md  friday.md  jarvis.md  jarvis.yaml  raw.yaml
heard/presets/: __init__.py  ambient.yaml  chatty.yaml  jarvis.yaml  silent.yaml
heard/profiles/: brief.yaml  normal.yaml  quiet.yaml  verbose.yaml
heard/tts/: __init__.py  elevenlabs.py  kokoro.py  managed.py  null.py
packaging/: app_entry.py  build-app.sh  build-icon.sh  dmg-settings.py  entitlements.plist  heard.icns  setup.py
scripts/: build-signed.sh  improve.py  setup_posthog_dashboards.py  synth_welcome.py
tests/: conftest.py  test_accessibility.py  test_adapter_cc.py  test_adapter_codex.py  test_agent_state.py  test_audio_monitor.py  test_basic.py  test_client_orphan_reap.py  test_codex_app.py  test_config.py  test_config_set.py  test_daemon_power_trial.py  test_daemon_runtime_self_heal.py  test_daemon_voice_resolution.py  test_defects.py  test_demo.py  test_final_floor.py  test_focus_mode.py  test_greeting.py  test_harness.py  test_heard_api.py  test_history.py  test_hook_disabled.py  test_hotkey.py  test_implicit_signals.py  test_in_app_update.py  test_intermediate_text.py  test_kokoro_download.py  test_log_rotation.py  test_managed_tts.py  test_markdown.py  test_memory_canary.py  test_multi_agent.py  test_muted.py  test_notify.py  test_onboarded_resolution.py  test_onboarding.py  test_onboarding_gate.py  test_persona.py  test_persona_kokoro_voice.py  (+32 more)
