[project]
name = "heard"
version = "0.5.6"
description = "A voice companion for your AI coding agents. Heard speaks your agent's replies so you can keep working."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "Heard Labs" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    # Local TTS path. Lazy-imported by the daemon — only loads in-process
    # when the user has no ElevenLabs key (i.e. opted into the free tier).
    # The model files (~337 MB) download separately on first use; never
    # bundled in the .app.
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "anthropic>=0.40.0",
    # The py2app-frozen Python has no system CA path, so urllib.request
    # / httpx / requests all fail CERTIFICATE_VERIFY_FAILED. Pin certifi
    # explicitly so it's installed and bundled, then point SSL_CERT_FILE
    # at certifi.where() in app_entry.py.
    "certifi>=2024.0.0",
    "pynput>=1.7",
    "rumps>=0.4",
    # Explicit pyobjc frameworks for the WKWebView onboarding window.
    # rumps brings pyobjc-core but not these — without them, importing
    # heard.key_window fails on a fresh CI runner.
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-WebKit>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
heard = "heard.cli:app"

[project.urls]
Homepage = "https://heard.dev"
Repository = "https://github.com/heardlabs/heard"
Issues = "https://github.com/heardlabs/heard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heard"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# tests call our internal markdown.strip(), which ruff mistakes for str.strip()
"tests/**.py" = ["B005"]
